--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <div class="social-media"></div>
   </footer>
   <script src="custom.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDf6jSoWWjTmM11y_dyAGQZrPDCJl9gHzM"></script>
 
   <script>
 
