updated mobile view

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
     <div id="map-canvas"></div>
 
   </div>
+  <div class="time"></div>
   <div class="container3">
     <div class="address">
 
